Teste Kursprojekt CI

--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -92,7 +92,10 @@
 <body>
     <h1><a href="/"> Easy-Notes</a></h1>
 
-    <h2>Servername: <%= serverName %>
+    <h2>
+        Servername: <%= serverName %> <br>
+            AppVersion: <%= appVersion %> <br>
+                Name: Vorname Nachname
     </h2>
 
     <% if(locals.message){ %>
