--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -95,7 +95,7 @@
     <h2>
         Servername: <%= serverName %> <br>
             AppVersion: <%= appVersion %> <br>
-                Name: Vorname Nachname
+                Name: Andi Tschan
     </h2>
 
     <% if(locals.message){ %>
