--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -90,7 +90,7 @@
 </script>
 
 <body>
-    <h1><a href="/"> Easy-Notes</a></h1>
+    <h1><a href="/"> EasyNotes</a></h1>
 
     <h2>
         Servername: <%= serverName %> <br>
